<resources>
    <string name="app_name">TODO</string>
    <string name="settings">Settings</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task description</string>
    <string name="sat_jan_2022_12_00pm">Sat Jan 2022 12:00PM</string>
    <string name="add_data"> + Add Data</string>
    <string name="_11_15_am">11:15 am</string>
    <string name="video_call_to_client_team">Video call to client team</string>
    <string name="random">random</string>
    <string name="_12_00pm">12:00PM</string>
    <string name="update">Update</string>
    <string name="offline">You are offline</string>
    <string name="connected">Connected</string>
    <string name="update_data">Update Data</string>
    <string name="required">Required</string>
    <string name="title_cannot_be_null">Title can not be null</string>
    <string name="desc_cannot_be_null">Description can not be null</string>
    <string name="select_a_date_future">Please, select a date from future</string>
    <string name="fill_all_properly">Fill all fields properly to add a task</string>
    <string name="fill_all_properly_or_update">Fill all fields properly to update a task or change at least one item</string>
    <string name="sync">Sync</string>
    <string name="delete">Delete</string>
    <string name="todo_list">ToDo List</string>
    <string name="add_todo">Add ToDo</string>
    <string name="update_todo">Update ToDo</string>
    <string name="ss">Settings</string>
    <string name="first_time">App Installed for the First time</string>
    <string name="select_hour">Select Hour</string>
    <string name="select_app_theme">Select App Theme</string>
    <string name="theme_t">Theme</string>

</resources>