<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">
        <SwitchPreference
            android:key="sync"
            android:title="Sync periodically" />

        <ListPreference
            android:dependency="sync"
            android:entries="@array/hour_entries"
            android:entryValues="@array/hour_values"
            app:key="period"
            app:title="@string/select_hour"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/select_app_theme">
        <ListPreference
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/theme_t"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>