<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Logo textview-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:fontFamily="@font/bungee"
                android:text="@string/add_data"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_32sp"
                android:transitionName="logo_text" />


            <!--Edittext title-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext_title_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:hint="@string/task_title"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_light"
                app:startIconDrawable="@drawable/ic_baseline_title_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="input_trans" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Edittext description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext_description_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:hint="@string/task_description"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_200"
                    android:transitionName="input_trans" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Textview date-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:background="@drawable/textview_custom"
                android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                android:fontFamily="@font/doppio_one"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_16"
                android:text="@string/sat_jan_2022_12_00pm"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_24sp"
                android:textStyle="bold" />

            <!--Add data button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16"
                android:background="@drawable/button_custom"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:padding="@dimen/dimen_2"
                android:text="@string/add_data"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                app:cornerRadius="@dimen/dimen_10" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>