<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_8"
    android:layout_marginTop="@dimen/dimen_4"
    android:layout_marginEnd="@dimen/dimen_8"
    android:layout_marginBottom="@dimen/dimen_8"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dimen_8"
    app:cardElevation="@dimen/dimen_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_4"
            android:background="@android:color/holo_red_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--todo list option button imageview-->

                    <ImageView
                        android:id="@+id/imageView_dummy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:contentDescription="@string/todo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_calendar_month_24" />
                    <!--todo list time textview-->
                    <TextView
                        android:id="@+id/textView_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:padding="@dimen/dimen_8"
                        android:text="@string/_11_15_am"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView_dummy"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />
                    <!--calender imageview-->
                    <ImageView
                        android:id="@+id/imageView_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_8"
                        android:contentDescription="@string/todo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Todo list title textview-->
                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:padding="@dimen/dimen_10"
                    android:text="@string/video_call_to_client_team"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Todo list item textview-->
                <TextView
                    android:id="@+id/textView_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:maxLines="15"
                    android:padding="@dimen/dimen_8"
                    android:singleLine="false"
                    android:text="@string/random" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>